--- a/app/src/main/res/layout/fragment_film.xml
+++ b/app/src/main/res/layout/fragment_film.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragment.FilmFragment">
+    tools:context=".ui.fragment.film.FilmFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/manga_rec_view"
+        android:id="@+id/film_rec_view"
         android:layout_width="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_height="match_parent"
